conf/02-empty-svc.yml
#kind: Deployment
#apiVersion: apps/v1
#metadata:
#  name: empty
#  namespace: default
#  labels:
#    app: containous
#    name: empty
#
#spec:
#  replicas: 2
#  selector:
#    matchLabels:
#      app: containous
#      task: empty
#  template:
#    metadata:
#      labels:
#        app: containous
#        task: empty
#    spec:
#      containers:
#        - name: containouswhoami
#          image: containous/whoami
#          ports:
#            - containerPort: 80
#
#---
apiVersion: v1
kind: Service
metadata:
  name: empty
  namespace: default

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: containous
    task: empty
