conf/03-0-ingressroute-unknown-svc.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.unknown.svc
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/2`)
      kind: Rule
      services:
        - name: bouboubou
          port: 80
