conf/03-0-ingressroute.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.valid.svc
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/1`)
      kind: Rule
      services:
        - name: whoami
          port: 80
