conf/03-1-ingressroute-without-pod-and-valid-svc.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute.without.pod.and.valid.svc
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/5`)
      kind: Rule
      services:
        - name: empty
          port: 80
        - name: whoami
          port: 80
